# dapp

./: .env  .env.example  .eslintrc.json  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  portalUrl.ts  tailwind.config.js  update.json
.github/workflows/: main.yml
src/: App.tsx  LoginScreen.tsx  MainScreen.tsx  SelectTasksScreen.tsx  store.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: endBreak.ts  finishWork.ts  getActiveTasks.ts  getAttendance.ts  getRedDots.ts  getScrums.ts  getTasks.ts  loginUser.ts  startBreak.ts  startTask.ts  stopTask.ts  updateCurrentEstimate.ts
src/api/consultations/: consultationInvites.ts  consultations.ts  join-consultation.ts  requestConsultation.ts
src/components/custom/: AddRemarksDialog.tsx  ConsultationItem.tsx  ScrumItem.tsx  StopTaskButton.tsx  graph.tsx  index.ts  timer.tsx
src/components/ui/: calendar.tsx  command.tsx  index.ts  timer.tsx  tooltip.tsx
src/data/: use-attendance.tsx  use-breaks.tsx  use-user.tsx
src/hooks/: useWindowDragAndMinimize.tsx
src/lib/: customAxios.ts  request.ts  router.tsx
src/screens/: AttributeHour.tsx  BreakReason.tsx  BreakTimer.tsx  Consultations.tsx  CreateConsultation.tsx  CreateTask.tsx  EditConsultation.tsx  LoginScreen.tsx  Main.tsx  MainScreen.tsx  MultipleProjects.tsx  Scrum.tsx  SelectAProject.tsx  SelectTask.tsx  TakeABreak.tsx  index.ts
src/screens/Authentication/: LoginScreen.tsx
src/screens/Consult/: CreateTaskForConsultation.tsx  (+2 more)
src/store/: index.tsx
src/types/: index.tsx
